--- a/scripts/config/templates/nginx.conf.erb
+++ b/scripts/config/templates/nginx.conf.erb
@@ -74,11 +74,11 @@ http {
 
     location / {
       mruby_post_read_handler /app/bin/config/lib/ngx_mruby/headers.rb cache;
-      #mruby_set $fallback /app/bin/config/lib/ngx_mruby/routes_fallback.rb cache;
+      mruby_set $fallback /app/bin/config/lib/ngx_mruby/routes_fallback.rb cache;
     <% if clean_urls %>
       try_files $uri.html $uri $uri/ $fallback @prerender;
     <% else %>
-      #try_files $uri $uri/ $fallback @prerender;
+      try_files $uri $uri/ $fallback @prerender;
     <% end %>
     }
 
